School inhoud + general fix
Ik heb de

--- a/dnd.html
+++ b/dnd.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>DnD</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href= index.html>Home</a></li>
-        <li><a href= school.html>School</a></li>
-        <li>D&D characters</li>
-        <li><a href= top10.html>Top 10 games</a></li>
+        <li class="navigation"><a href= index.html>Home</a></li>
+        <li class="navigation"><a href= school.html>School</a></li>
+        <li class="navigation">D&D characters</li>
+        <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
 
