--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
     <nav>
       <ul>
-        <li>Home</li>
-        <li><a href= school.html>School</a></li>
-        <li><a href= dnd.html>D&D characters</a></li>
-        <li><a href= top10.html>Top 10 games</a></li>
+        <li class="navigation">Home</li>
+        <li class="navigation"><a href= school.html>School</a></li>
+        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
 
