--- a/school.html
+++ b/school.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>School</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href= index.html>Home</a></li>
-        <li>School</li>
-        <li><a href= dnd.html>D&D characters</a></li>
-        <li><a href= top10.html>Top 10 games</a></li>
+        <li class="navigation"><a href= index.html>Home</a></li>
+        <li class="navigation">School</li>
+        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
+    <h1>School</h1>
+    <div class="grid-container">
 
+      <div class="grid-item">
+        <p>Ik heb in de coderclass gezeten, daarvoor heb ik websites gemaakt. Hieronder zijn de links naar de websites</p>
+        <ul>
+          <li><a href="https://midaso190.github.io/Project-0_challenge-2/">Website voor Workout4Schools Jaar 1</a></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="grid-item">
+        <img src="https://pbs.twimg.com/profile_images/736563724060889088/ImuxFNVT_400x400.jpg"></img>
+      </div>
+    </div>
   </body>
 </html>
