--- a/top10.html
+++ b/top10.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>Top10</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
       <ul>
-        <li><a href= index.html>Home</a></li>
-        <li><a href= school.html>School</a></li>
-        <li><a href= dnd.html>D&D characters</a></li>
-        <li>Top 10 games</li>
+        <li class="navigation"><a href= index.html>Home</a></li>
+        <li class="navigation"><a href= school.html>School</a></li>
+        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation">Top 10 games</li>
       </ul>
     </nav>
 
