School inhoud + Over Mij
Ik heb de inhoud van "School" aangevuld en de pagina "D&D characters" veranderd naar "Over mij".

--- a/dnd.html
+++ b/dnd.html
@@ -9,7 +9,7 @@
       <ul>
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation"><a href= school.html>School</a></li>
-        <li class="navigation">D&D characters</li>
+        <li class="navigation">Over mij</li>
         <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
