--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
       <ul>
         <li class="navigation">Home</li>
         <li class="navigation"><a href= school.html>School</a></li>
-        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation"><a href= dnd.html>Over mij</a></li>
         <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
-
+    <h1>Home</h1>
+    <div class="grid-container">
+      
+    </div>
   </body>
 </html>
