--- a/school.html
+++ b/school.html
@@ -9,23 +9,93 @@
       <ul>
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation">School</li>
-        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation"><a href= dnd.html>Over mij</a></li>
         <li class="navigation"><a href= top10.html>Top 10 games</a></li>
       </ul>
     </nav>
     <h1>School</h1>
     <div class="grid-container">
+      <div class="grid-item">
+        <p>Ik zit op het Metis Montessori Lyceum op de mauritskade in Amsterdam. Ik zit in klas 4v2 tijdens het maken van deze website.</p>
+        <p>Ik doe het vakkenpakket N&G</p>
+      </div>
 
       <div class="grid-item">
-        <p>Ik heb in de coderclass gezeten, daarvoor heb ik websites gemaakt. Hieronder zijn de links naar de websites</p>
+        <p>Ik heb in de coderclass gezeten, ik heb daar websites gemaakt. Hieronder zijn de links naar de websites</p>
         <ul>
           <li><a href="https://midaso190.github.io/Project-0_challenge-2/">Website voor Workout4Schools Jaar 1</a></li>
-          <li></li>
-          <li></li>
+          <li><a href="https://midaso190.github.io/Bill_Gates_Html-Css-1/index.html">Website voor de html-css-1 badge</a></li>
         </ul>
       </div>
+
       <div class="grid-item">
         <img src="https://pbs.twimg.com/profile_images/736563724060889088/ImuxFNVT_400x400.jpg"></img>
+      </div>
+
+      <div class="grid-item">
+        <h1>Mijn Rooster </h1>
+        <table class="Rooster">
+          <tr>
+            <th></th>
+            <th>Ma</th>
+            <th>Di</th>
+            <th>Wo</th>
+            <th>Do</th>
+            <th>Vr</th>
+          </tr>
+          <tr>
+            <th>8:30-9:35</th>
+            <td></td>
+            <td rowspan="2">LO</td>
+            <td>DU</td>
+            <td>IN</td>
+            <td>WI</td>
+          </tr>
+          <tr>
+            <th>9:35-10:25</th>
+            <td>IN</td>
+            <td></td>
+            <td>SK</td>
+            <td>DU</td>
+          </tr>
+          <tr>
+            <th>10:50-11:40</th>
+            <td colspan="5">M-uur</td>
+          </tr>
+          <tr>
+            <th>11:40-12:30</th>
+            <td>NA</td>
+            <td>BI</td>
+            <td>CK</td>
+            <td>NE</td>
+            <td>IN</td>
+          </tr>
+          <tr>
+            <th>13:00-13:50</th>
+            <td rowspan="4"></td>
+            <td>NA</td>
+            <td rowspan="2">NE</td>
+            <td>BI</td>
+            <td>SK</td>
+          </tr>
+          <tr>
+            <th>13:50-14:40</th>
+            <td></td>
+            <td>WI</td>
+            <td rowspan="2"></td>
+          </tr>
+          <tr>
+            <th>14:50-15:40</th>
+            <td>WI</td>
+            <td>MA</td>
+            <td>EN</td>
+          </tr>
+          <tr>
+            <th>15:40-16:30</th>
+            <td>EN</td>
+            <td colspan="3"></td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
