--- a/top10.html
+++ b/top10.html
@@ -9,10 +9,10 @@
       <ul>
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation"><a href= school.html>School</a></li>
-        <li class="navigation"><a href= dnd.html>D&D characters</a></li>
+        <li class="navigation"><a href= dnd.html>Over mij</a></li>
         <li class="navigation">Top 10 games</li>
       </ul>
     </nav>
-
+    <h1>Top10</h1>
   </body>
 </html>
