--- a/dnd.html
+++ b/dnd.html
@@ -10,7 +10,7 @@
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation"><a href= school.html>School</a></li>
         <li class="navigation">Over mij</li>
-        <li class="navigation"><a href= top10.html>Top 10 games</a></li>
+        <li class="navigation"><a href= top10.html>10 goede games</a></li>
       </ul>
     </nav>
 
