--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
         <li class="navigation">Home</li>
         <li class="navigation"><a href= school.html>School</a></li>
         <li class="navigation"><a href= dnd.html>Over mij</a></li>
-        <li class="navigation"><a href= top10.html>Top 10 games</a></li>
+        <li class="navigation"><a href= top10.html>10 goede games</a></li>
       </ul>
     </nav>
     <h1>Home</h1>
     <div class="grid-container">
-      
+      <p>Welkom op mijn website!</p>
+      <p></p>
     </div>
   </body>
 </html>
