--- a/top10.html
+++ b/top10.html
@@ -10,9 +10,23 @@
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation"><a href= school.html>School</a></li>
         <li class="navigation"><a href= dnd.html>Over mij</a></li>
-        <li class="navigation">Top 10 games</li>
+        <li class="navigation">10 goede games</li>
       </ul>
     </nav>
-    <h1>Top10</h1>
+    <h1>10 goede games</h1>
+    <h3>Dit zijn 10 goede games, ze zijn niet in een bepaalde volgorde.</h3>
+    <div class="grid-item">
+      <h1>1</h1>
+      <p>Hollow Knight</p>
+      <img src:"">
+    </div>
+    <div class="grid-item">
+      <h1>2</h1>
+      <p>Patch Quest</p>
+    </div>
+    <div class="grid-item">
+      <h1>3</h1>
+      <p>Inscryption</p>
+    </div>
   </body>
 </html>
