Top 9 en de index afgemaakt!

--- a/dnd.html
+++ b/dnd.html
@@ -10,9 +10,16 @@
         <li class="navigation"><a href= index.html>Home</a></li>
         <li class="navigation"><a href= school.html>School</a></li>
         <li class="navigation">Over mij</li>
-        <li class="navigation"><a href= top10.html>10 goede games</a></li>
+        <li class="navigation"><a href= top10.html>9 goede games</a></li>
       </ul>
     </nav>
-
+    <div class="grid-container">
+      <div class="grid-item">
+        <p>H4ll0! Ik ben Midas Steeman. Een of andere computernerd die misschien net iets te veel gamed.</p>
+      </div>
+      <div class="grid-item">
+        <p></p>
+      </div>
+    </div>
   </body>
 </html>
