--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
         <li class="navigation">Home</li>
         <li class="navigation"><a href= school.html>School</a></li>
         <li class="navigation"><a href= dnd.html>Over mij</a></li>
-        <li class="navigation"><a href= top10.html>10 goede games</a></li>
+        <li class="navigation"><a href= top10.html>9 goede games</a></li>
       </ul>
     </nav>
     <h1>Home</h1>
+    <h3>Bonjour! En welkom op mijn website</h3>
+    <h3>Op deze website kan je dingen vinden zoals:</h3>
     <div class="grid-container">
-      <p>Welkom op mijn website!</p>
-      <p></p>
+      <div class="grid-item">
+        <h2>Informatie over mijn school!</h2>
+      </div>
+      <div class="grid-item">
+        <h2>een lijst van 9 (on)bekende games</h2>
+      </div>
+      <div class="grid-item">
+        <h2>Informatie over mij!</h2>
+      </div>
+
     </div>
+    <h3>Al dit hier is voor de Html-0-1-2 opdracht</h3>
   </body>
 </html>
