--- a/dnd.html
+++ b/dnd.html
@@ -18,7 +18,10 @@
         <p>H4ll0! Ik ben Midas Steeman. Een of andere computernerd die misschien net iets te veel gamed.</p>
       </div>
       <div class="grid-item">
-        <p></p>
+        <p>Ik houd veel van coderen. Ik vond het bijvoorbeeld heel leuk om deze website te maken!</p>
+      </div>
+      <div class="grid-item">
+        <p>Ik speel ook nog 'Dungeons and Dragons' Dat is een soort bordspel waarbij je je fantasie moet gebruiken.</p>
       </div>
     </div>
   </body>
