--- a/school.html
+++ b/school.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div style="background-image: url('https://pbs.twimg.com/profile_images/736563724060889088/ImuxFNVT_400x400.jpg');">
     <nav>
       <ul>
         <li class="navigation"><a href= index.html>Home</a></li>
@@ -26,10 +27,6 @@
           <li><a href="https://midaso190.github.io/Project-0_challenge-2/">Website voor Workout4Schools Jaar 1</a></li>
           <li><a href="https://midaso190.github.io/Bill_Gates_Html-Css-1/index.html">Website voor de html-css-1 badge</a></li>
         </ul>
-      </div>
-
-      <div class="grid-item">
-        <img src="https://pbs.twimg.com/profile_images/736563724060889088/ImuxFNVT_400x400.jpg"></img>
       </div>
 
       <div class="grid-item">
